--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ h1{
 }
 
 .top-banner{
-    background-image: url(images/top-banner.png);
+    background-image: url(Images/top-banner.png);
     background-repeat: no-repeat;
 }
 section{
@@ -37,7 +37,7 @@ section{
     font-weight: 700;
   }
   .bottom-banner{
-      background-image:url(images/dream-bg.png);
+      background-image:url(Images/dream-bg.png);
       background-repeat: no-repeat;
       background-position: right;
   }
